Add Rhino Shiny dashboard with interactive bar and line charts
R2 download tracking dashboard using echarts4r and reactable.
Modules for project/type selection drive chart rendering (bar for
aggregate stats, line for cumulative downloads over time). CSS grid
layout with SASS for side-by-side table and chart display.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "r2-tracker",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "description": "Cloudflare Worker to track R2 downloads for kylegrealis.com subdomains",
   "scripts": {
